--- a/package.json
+++ b/package.json
@@ -8,26 +8,46 @@
     "start": "npm run serve",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch-build": "tsc -w"
+    "watch-build": "tsc -w",
+    "test": "jest",
+    "test-watch": "jest --watchAll"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nocache": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
+    "request": "^2.88.0",
+    "routing-controllers": "^0.8.0",
+    "supertest": "^4.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
+    "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.23",
     "@types/morgan": "^1.7.37",
+    "@types/request": "^2.48.3",
+    "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.1",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
