--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
-  "name": "hello-nodejs-typescript",
+  "name": "node-typescript-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "A starter app for your next node.js API project.",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run tslint && tsc",
     "start": "npm run serve",
     "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "watch-build": "tsc -w",
-    "test": "jest",
-    "test-watch": "jest --watchAll"
+    "watch:node": "nodemon dist/server.js",
+    "watch:build": "tsc -w",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watchAll",
+    "tslint": "tslint --project ."
   },
-  "author": "",
+  "author": "Jonathan McKenzie",
   "license": "MIT",
   "dependencies": {
+    "await-timeout": "^1.1.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "morgan": "^1.9.1",
     "nocache": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "routing-controllers": "^0.8.0",
     "supertest": "^4.0.2",
-    "winston": "^3.2.1"
+    "typedi": "^0.8.0",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
+    "@types/await-timeout": "^0.3.1",
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
+    "@types/dateformat": "^3.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
+    "@types/moment": "^2.13.0",
+    "@types/moment-duration-format": "^2.2.2",
     "@types/morgan": "^1.7.37",
     "@types/request": "^2.48.3",
     "@types/supertest": "^2.0.8",
